# door-hardware-set-extractor

./: .gitignore  README.md  pyproject.toml
docs/: app.js  index.html  styles.css
docs/data/: bridgeport_hw_schedule.json  bridgeport_hw_schedule_rev0.json  hfh_087100.json  jcryan_087100.json
eval/: bridgeport_gold_from_pdf_annotated_v1.json  bridgeport_report_real_v1.json  hfh_gold_from_pdf_annotated_v1.json  hfh_report_real_v2.json  jcryan_gold_from_pdf_annotated_v1.json  jcryan_report_real_v2.json
scripts/: annotate_gold_draft_v1.py  annotate_real_samples_v1.py  build_annotation_template.py  build_feedback_ui.py  build_gold_from_pdf.py  evaluate.py  feedback_server.js  quality_report.py
src/: confidence_review.py  mfr_finish.py  pipeline.py  set_boundaries.py
src/schemas/: models.py
tests/: test_headers.py
ui/: app.js
